--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "financial-planner"
+name = "financial-simulation"
 version = "0.1.0"
 description = "A new pywire application"
 requires-python = ">=3.12"
